name:                crypto-box
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Lars Petersen
maintainer:          lars@nyantec.com
category:            Crypto
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Crypto.Box
                     , Crypto.Box.Debug
  build-depends:       base >=4.8 && <4.9
                     , bytestring
                     , exceptions
                     , transformers
  default-language:    Haskell2010